# StudentManagementSystem-rs

./: Cargo.toml  system.db
queries/: create_tables.sql
src/: main.rs
src/backend/: api.rs  db_driver.rs  mod.rs  password.rs  rest_api.rs  server_connection_impl.rs  sqlite_conn.rs  table_models.rs
src/ui/: application.rs
themes/: dark_theme.toml
