[package]
name = "student_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database and web server framework
rusqlite = { version = "0.30.0", features = ["bundled"] }
actix-web = { version = "*", features = ["rustls"] }
actix-rt = "*"
actix-cors = "*"
rustls = "*"

# Serde
serde = "*"
serde_derive = "*"
serde_json = "*"

# Easier error handling
anyhow = "*"

# Extra types
chrono = "*"
regex = "*"

# Hashing
argon2 = "*"